--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
@@ -26,6 +26,7 @@ custom-token-names=أسماء الرموز المميزة المخصصة
 custom-token-values=قيم الرموز المميزة المخصصة
 database-content-keyword-search-enabled=البحث بكلمة أساسية عن محتوى بقاعدة البيانات ممكَّن
 default-display-page=صفحة العرض الافتراضية
+default-language-x=Default language: {0}. (Automatic Copy)
 default-template=القالب الافتراضي
 display-views=عرض طرق العرض
 do-you-want-to-x-or-x-web-content=هل تريد محتوى الويب {0} أو {1}؟
