--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
@@ -26,6 +26,7 @@ custom-token-names=Anpassa tokennamn
 custom-token-values=Anpassa tokenvärden
 database-content-keyword-search-enabled=Sökning efter nyckelord i databasinnehåll aktiverad
 default-display-page=Standardvisningssida
+default-language-x=Default language: {0}. (Automatic Copy)
 default-template=Standardmall
 display-views=Visa visningar
 do-you-want-to-x-or-x-web-content=Vill du {0} eller {1} webbinnehåll?
