--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
@@ -26,6 +26,7 @@ custom-token-names=Custom Token Names (Automatic Copy)
 custom-token-values=Custom Token Values (Automatic Copy)
 database-content-keyword-search-enabled=Database Content Keyword Search Enabled (Automatic Copy)
 default-display-page=Default Display Page (Automatic Copy)
+default-language-x=Default language: {0}. (Automatic Copy)
 default-template=Default template (Automatic Copy)
 display-views=Display Views (Automatic Copy)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
@@ -197,6 +198,7 @@ the-folder-you-selected-does-not-allow-this-type-of-structure.-please-select-a-d
 the-selected-web-content-was-deleted=The selected web content was deleted. (Automatic Copy)
 the-selected-web-content-was-moved-to-the-recycle-bin=The selected web content was moved to the Recycle Bin. (Automatic Copy)
 the-structure-you-selected-is-not-valid-for-this-folder=The structure you selected is not valid for this folder. (Automatic Copy)
+the-version-that-is-going-to-be-edited-is-not-the-one-shown-because-recent-versions-have-been-created-on-top-of-it=The version that is going to be edited is not the one shown because recent versions have been created on top of it. (Automatic Copy)
 the-web-content-article-x-was-moved-to-the-recycle-bin=The web content article <strong><em>{0}</em></strong> was moved to the Recycle Bin. (Automatic Copy)
 there-are-no-journal-images=There are no web content images. (Automatic Copy)
 there-is-no-web-content-with-structure-x=There is no web content with structure <em>{0}</em>. (Automatic Copy)
