--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
@@ -26,8 +26,8 @@ custom-token-names=أسماء الرموز المميزة المخصصة
 custom-token-values=قيم الرموز المميزة المخصصة
 database-content-keyword-search-enabled=البحث بكلمة أساسية عن محتوى بقاعدة البيانات ممكَّن
 default-display-page=صفحة العرض الافتراضية
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=القالب الافتراضي
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=عرض طرق العرض
 do-you-want-to-x-or-x-web-content=هل تريد محتوى الويب {0} أو {1}؟
 do-you-want-to-x-web-content=هل تريد محتوى الويب {0}؟
