--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ro.properties
@@ -26,8 +26,8 @@ custom-token-names=Nume Token personalizate (Automatic Translation)
 custom-token-values=Valorile Token personalizate (Automatic Translation)
 database-content-keyword-search-enabled=Baza de date de cuvinte cheie conţinut de căutare activat (Automatic Translation)
 default-display-page=Implicit Afişare pagină (Automatic Translation)
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Şablon implicit (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Afişare Views (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
