--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ru.properties
@@ -26,8 +26,8 @@ custom-token-names=Пользовательские имена токенов (A
 custom-token-values=Пользовательские значения маркера (Automatic Translation)
 database-content-keyword-search-enabled=Поиск в базе данных контента ключевое слово включено (Automatic Translation)
 default-display-page=Страница отображения по умолчанию
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Шаблон по умолчанию (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Отображение представления (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
