--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sl.properties
@@ -26,8 +26,8 @@ custom-token-names=Meri žetona imena (Automatic Translation)
 custom-token-values=Žeton vrednosti po meri (Automatic Translation)
 database-content-keyword-search-enabled=Zbirke podatkov vsebine ključno besedo iskanje omogočeno (Automatic Translation)
 default-display-page=Privzeti prikaz strani (Automatic Translation)
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Privzeta predloga (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Prikaza (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
