--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
@@ -26,8 +26,8 @@ custom-token-names=Anpassa tokennamn
 custom-token-values=Anpassa tokenvärden
 database-content-keyword-search-enabled=Sökning efter nyckelord i databasinnehåll aktiverad
 default-display-page=Standardvisningssida
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Standardmall
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Visa visningar
 do-you-want-to-x-or-x-web-content=Vill du {0} eller {1} webbinnehåll?
 do-you-want-to-x-web-content=Vill du {0} webbinnehåll?
