--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_bg.properties
@@ -26,8 +26,8 @@ custom-token-names=Потребителски имена на маркери (Au
 custom-token-values=Потребителски знак стойности (Automatic Translation)
 database-content-keyword-search-enabled=База данни за съдържание ключови думи за търсене поддръжка (Automatic Translation)
 default-display-page=Дисплея страница по подразбиране (Automatic Translation)
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Шаблон по подразбиране (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Показване на изгледи (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
