--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_cs.properties
@@ -26,8 +26,8 @@ custom-token-names=Vlastní Token názvy (Automatic Translation)
 custom-token-values=Vlastní hodnoty Token (Automatic Translation)
 database-content-keyword-search-enabled=Databáze obsahu klíčových slov povoleno (Automatic Translation)
 default-display-page=Výchozí stránka zobrazení
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Výchozí šablona (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Zobrazení (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
