--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
@@ -26,8 +26,8 @@ custom-token-names=Nombres de token personalizados
 custom-token-values=Valores de token personalizados
 database-content-keyword-search-enabled=Búsqueda por palabras clave de contenido de base de datos habilitada
 default-display-page=Página de visualización por defecto
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Plantilla por defecto
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Mostrar vistas
 do-you-want-to-x-or-x-web-content=¿Quiere {0} o {1} contenido web?
 do-you-want-to-x-web-content=¿Quiere {0} contenido web?
