--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_et.properties
@@ -26,8 +26,8 @@ custom-token-names=Kohandatud sümboolne nimed (Automatic Translation)
 custom-token-values=Kohandatud sümboolne väärtusi (Automatic Translation)
 database-content-keyword-search-enabled=Andmebaasi sisu märksõna otsingu võimalus (Automatic Translation)
 default-display-page=Vaikimisi kuvatav leht (Automatic Translation)
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Vaikemalli (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Kuva vaated (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
