--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
@@ -26,8 +26,8 @@ custom-token-names=نام رمز سفارشی (Automatic Translation)
 custom-token-values=ارزش نمادین سفارشی (Automatic Translation)
 database-content-keyword-search-enabled=جستجوی کلمه کلیدی محتوای پایگاه داده فعال (Automatic Translation)
 default-display-page=صفحات نمایش پیش‌فرض
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=قالب پیش‌فرض
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=نمایش صفحه نمایش (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
