--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
@@ -26,8 +26,8 @@ custom-token-names=Egyéni tokennevek
 custom-token-values=Egyéni tokenértékek
 database-content-keyword-search-enabled=Adatbázis tartalmának kulcsszavas keresése engedélyezve
 default-display-page=Alapértelmezett megjelenítő oldal
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Alapértelmezett sablon
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Megjelenítési nézetek
 do-you-want-to-x-or-x-web-content=Kíván {0} vagy {1} a webes tartalommal?
 do-you-want-to-x-web-content=Kíván {0} a webes tartalommal?
