--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_in.properties
@@ -26,8 +26,8 @@ custom-token-names=Nama-nama Token kustom (Automatic Translation)
 custom-token-values=Nilai Token kustom (Automatic Translation)
 database-content-keyword-search-enabled=Pencarian kata kunci konten database diaktifkan (Automatic Translation)
 default-display-page=Standar Halaman Display
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Default template (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Menampilkan pemandangan (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
