--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
@@ -26,8 +26,8 @@ custom-token-names=Nomi dei Token personalizzati (Automatic Translation)
 custom-token-values=Valori del Token personalizzati (Automatic Translation)
 database-content-keyword-search-enabled=Ricerca per parola chiave contenuto database abilitato (Automatic Translation)
 default-display-page=Pagina di Visualizzazione Predefinita
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Modello predefinito (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Visualizzare viste (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
