--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
@@ -26,8 +26,8 @@ custom-token-names=Egendefinerte symbolsk navn (Automatic Translation)
 custom-token-values=Egendefinerte Token verdier (Automatic Translation)
 database-content-keyword-search-enabled=Databasen innhold søkeord aktivert (Automatic Translation)
 default-display-page=Standard visningsside
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Standardmalen (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Visninger (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
