--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
@@ -26,8 +26,8 @@ custom-token-names=Niestandardowe nazwy tokenu (Automatic Translation)
 custom-token-values=Niestandardowe wartości tokenu (Automatic Translation)
 database-content-keyword-search-enabled=Bazy danych zawartości słowo kluczowe wyszukiwania włączona (Automatic Translation)
 default-display-page=Domyślna strona wyświetlana
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Domyślny szablon (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Wyświetlanie widoków (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
