--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
@@ -26,8 +26,8 @@ custom-token-names=Nomes de token personalizados
 custom-token-values=Valores de token personalizados
 database-content-keyword-search-enabled=Busca por Palavra-Chave do Conteúdo no Banco de Dados Habilitada
 default-display-page=Página de exibição padrão
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Modelo Padrão
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Exibir visualizações
 do-you-want-to-x-or-x-web-content=Você deseja {0} ou {1} o Conteúdo Web?
 do-you-want-to-x-web-content=Você deseja {0} o Conteúdo Web?
