--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sk.properties
@@ -26,8 +26,8 @@ custom-token-names=Vlastné mená tokenu (Automatic Translation)
 custom-token-values=Vlastné hodnoty tokenu (Automatic Translation)
 database-content-keyword-search-enabled=Databáza obsahu vyhľadávanie zapnuté (Automatic Translation)
 default-display-page=Predvolená zobrazujúca stránka
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Predvolená šablóna (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Zobrazenia na displeji (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
