--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
@@ -26,8 +26,8 @@ custom-token-names=ชื่อโทเคนที่กำหนดเอง 
 custom-token-values=ค่าโทเค็นที่กำหนดเอง (Automatic Translation)
 database-content-keyword-search-enabled=ค้นหาเนื้อหาสำคัญฐานข้อมูลที่เปิดใช้งาน (Automatic Translation)
 default-display-page=หน้าจอเริ่มต้น (Automatic Translation)
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=แม่แบบเริ่มต้น (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=แสดงมุมมอง (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
