--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_vi.properties
@@ -26,8 +26,8 @@ custom-token-names=Tùy chỉnh tên Token (Automatic Translation)
 custom-token-values=Tuỳ chỉnh các giá trị mã thông báo (Automatic Translation)
 database-content-keyword-search-enabled=Cơ sở dữ liệu nội dung từ khoá tìm kiếm kích hoạt (Automatic Translation)
 default-display-page=Trang hiển thị mặc định
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=Mặc định mẫu (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=Hiển thị lượt xem (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
