--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
@@ -26,8 +26,8 @@ custom-token-names=自定义令牌名称
 custom-token-values=自定义令牌值
 database-content-keyword-search-enabled=启用数据库内容关键字搜索
 default-display-page=默认显示页面
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=默认模板
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=显示视图
 do-you-want-to-x-or-x-web-content=是否想要{0}或{1} Web 内容？
 do-you-want-to-x-web-content=是否想要{0} Web 内容？
