--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_TW.properties
@@ -26,8 +26,8 @@ custom-token-names=自訂權杖名稱 (Automatic Translation)
 custom-token-values=自訂標記值 (Automatic Translation)
 database-content-keyword-search-enabled=已啟用資料庫內容關鍵字搜索 (Automatic Translation)
 default-display-page=預設顯示頁面
-default-language-x=Default language: {0}. (Automatic Copy)
-default-template=預設範本 (Automatic Translation)
+default-language-x=Default Language: {0}. (Automatic Copy)
+default-template=Default Template (Automatic Copy)
 display-views=顯示視圖 (Automatic Translation)
 do-you-want-to-x-or-x-web-content=Do you want to {0} or {1} Web Content? (Automatic Copy)
 do-you-want-to-x-web-content=Do you want to {0} Web Content? (Automatic Copy)
